--- a/Microservices/Mango/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Microservices/Mango/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -7,11 +7,18 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=devendra;Database=Mango_Product;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=devendra;Database=Mango_ShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "mango-auth-api",
     "Audience": "mango-client"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000",
+    "CouponAPI": "https://localhost:7001"
+  },
+  "TopicAndQueueNames": {
+    "EmailShoppingCartQueue": "emailshoppingcart"
   }
 }
