--- a/UserService.API/appsettings.json
+++ b/UserService.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "UserDbConnection": "Server=DEVENDRA;Database=UserServiceDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "UserDbConnection": "Server=DEVENDRA;Database=ProductDBTest;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "JwtSettings": {
