--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ordersmicroserviceapi
     build:
       context: .
-      dockerfile: Orders/OrdersMicroservice.API/Dockerfile
+      dockerfile: Microservices/eCommerce/Orders/OrdersMicroservice.API/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - MONGODB_HOST=mongodb-container
@@ -35,6 +35,7 @@ services:
       - ecommerce-network
     depends_on:
       - mongodb-container
+      - rabbitmq
 
 
   mongodb-container: 
@@ -42,7 +43,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - D:/eCommerceMicroservces/mongodb-init:/docker-entrypoint-initdb.d
+      - D:/DotNetCore/Microservices/eCommerce/mongodb/mongodb-init:/docker-entrypoint-initdb.d
     networks:
       - orders-mongodb-network
 
@@ -69,6 +70,7 @@ services:
       - ecommerce-network
     depends_on:
       - mysql-container
+      - rabbitmq
 
   mysql-container:
     image: mysql:8.0
@@ -80,7 +82,7 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - D:/eCommerceMicroservces/mysql-init:/docker-entrypoint-initdb.d
+      - D:/DotNetCore/Microservices/eCommerce/mysql/mysql-init:/docker-entrypoint-initdb.d
     networks:
       - products-mysql-network
       
@@ -102,6 +104,7 @@ services:
       - ecommerce-network
     depends_on:
       - postgres-container
+      - rabbitmq
 
 
   postgres-container:
@@ -113,7 +116,7 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - D:/eCommerceMicroservces/postgres-init:/docker-entrypoint-initdb.d
+      - D:/DotNetCore/Microservices/eCommerce/postgres/postgres-init:/docker-entrypoint-initdb.d
     networks:
       - users-postgres-network
     
@@ -122,7 +125,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - D:/eCommerceMicroservces/redis-cache:/data
+      - D:/DotNetCore/Microservices/eCommerce/redis/redis-cache:/data
     networks:
       - ecommerce-network
   
@@ -130,7 +133,7 @@ services:
     image: apigateway
     build:
       context: .
-      dockerfile: Orders/ApiGateway/Dockerfile
+      dockerfile: Microservices/eCommerce/Orders/ApiGateway/Dockerfile
     ports:
       - "4000:8080"
     networks:
