--- a/WebAPI/Logging/OrderManagementAPI/appsettings.json
+++ b/WebAPI/Logging/OrderManagementAPI/appsettings.json
@@ -11,5 +11,16 @@
       "System": "Error"
     }
   },
+
+  "File": {
+    "FilePath": "Logs/order-api-log.txt",
+    "MinimumLogLevel": "Information",
+    "UseDailyRollingFiles": true
+  },
+
+  "Database": {
+    "MinimumLogLevel": "Warning"
+  },
+
   "AllowedHosts": "*"
 }
